@@ -33,6 +33,9 @@
    - djm@cvs.openbsd.org 2003/04/04 09:34:22
      [Makefile sftp-cmds.sh]
      More regression tests, including recent directory rename bug; ok markus@
+   - markus@cvs.openbsd.org 2003/05/14 22:08:27
+     [ssh-com-client.sh ssh-com-keygen.sh ssh-com-sftp.sh ssh-com.sh]
+     test against some new commerical versions
 
 20030614
  - (djm) Update license on fake-rfc2553.[ch]; ok itojun@
@@ -548,4 +551,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.2812 2003/06/18 12:35:11 dtucker Exp $
+$Id: ChangeLog,v 1.2813 2003/06/18 12:36:48 dtucker Exp $
